# gis_patrol_rubin

./: .gitattributes  .gitignore
gis_patrol_client/: CMakeLists.txt  gis_patrol.qrc  gis_patrol_client.conf.astra.example  gis_patrol_client.conf.gentoo.example  gis_patrol_client.pro
gis_patrol_client/app/: app.pro
gis_patrol_client/app/operator_app/: CMakeLists.txt  main.cpp  operator_app.pro  patrol_main_window.ui  patrolmainwindow.cpp  patrolmainwindow.h
gis_patrol_client/src/: CMakeLists.txt  src.pro
gis_patrol_client/src/corelibs/: CMakeLists.txt  corelibs.pri  corelibs.pro  patroldbloader.cpp  patroldbloader.h  patroldbwriter.cpp  patroldbwriter.h  patrolguiapp.cpp  patrolguiapp.h  patrolsingleton.cpp  patrolsingleton.h  psettings.cpp  psettings.h
gis_patrol_client/src/corelibs/ui/: login_db_form.ui  logindbform.cpp  logindbform.h  p_settings_form.ui  psettingsform.cpp  psettingsform.h
gis_patrol_client/src/dataaccess/: CMakeLists.txt  dataaccess.pro  db_access.pri  gis_patroldatabase.cpp  gis_patroldatabase.h  gis_patrolpgdatabase.cpp  gis_patrolpgdatabase.h  gis_patrolpgresult.cpp  gis_patrolpgresult.h  gis_patrolresult.cpp  gis_patrolresult.h  pg_access.pri
gis_patrol_client/src/factories/: CMakeLists.txt  factories.pro
gis_patrol_client/src/factories/guifactory/: CMakeLists.txt  guifactory.pri  guifactory.pro  pCatGuiFactory.cpp  pCatGuiFactory.h  pEntityFactory.cpp  pEntityFactory.h  pGuiFactory.cpp  pGuiFactory.h  pIOGuiFactory.cpp  pIOGuiFactory.h  pParamGuiFactory.cpp  pParamGuiFactory.h
gis_patrol_client/src/factories/pgui/: CMakeLists.txt  pAbstractParamWidget.cpp  pAbstractParamWidget.h  pCIOEditor.cpp  pCIOEditor.h  pCatEditor.cpp  pCatEditor.h  pCatParamDelegate.cpp  pCatParamDelegate.h  pCatParamModel.cpp  pCatParamModel.h  pCatParamSortModel.cpp  pCatParamSortModel.h  pCatTreeItem.cpp  pCatTreeItem.h  pCategoryListForm.cpp  pCategoryListForm.h  pCategoryModel.cpp  pCategoryModel.h  pCheckBox.cpp  pCheckBox.h  pCheckableDataModel.cpp  pCheckableDataModel.h  pColorEdit.cpp  pColorEdit.h  pDateEdit.cpp  pDateEdit.h  pDateTimeEdit.cpp  pDateTimeEdit.h  pEventFilter.cpp  pEventFilter.h  pGeomForm.cpp  pGeomForm.h  pImageLabel.cpp  pImageLabel.h  pItemDelegate.cpp  pItemDelegate.h  pLineEdit.cpp  pLineEdit.h  pParamCheckWidget.cpp  (+31 more)
gis_patrol_client/src/factories/pgui/ui/: p_rec_dialog.ui  p_search_form.ui  params_form.ui  params_group_form.ui  paramsform.cpp  paramsform.h  paramsgroupform.cpp  paramsgroupform.h  precdialog.cpp  precdialog.h  psearchform.cpp  psearchform.h
gis_patrol_client/src/gis_patrolutils/: CMakeLists.txt  configUtils.h  defines.h  gis_patrol_getsymbol.cpp  gis_patrol_getsymbol.h  gis_patrol_minixml.cpp  gis_patrol_minixml.h  gis_patrolutils.pri  gis_patrolutils.pro  strutils.h
gis_patrol_client/src/patrolCommunications/: CMakeLists.txt  pAttribute.h  pCatParameter.cpp  pCatParameter.h  pCategory.cpp  pCategory.h  pCategoryType.cpp  pCategoryType.h  pCommCenter.cpp  pCommCenter.h  pCommCenterType.cpp  pCommCenterType.h  pCommNode.cpp  pCommNode.h  pFilter.cpp  pFilter.h  pFilterGroup.cpp  pFilterGroup.h  pIObject.cpp  pIObject.h  pParamGroup.cpp  pParamGroup.h  pParamType.cpp  pParamType.h  pParamValue.cpp  pParamValue.h  pParamView.cpp  pParamView.h  pParameter.cpp  pParameter.h  pRecord.cpp  pRecord.h  pRecordC.cpp  pRecordC.h  patrolCommunications.pri  patrolCommunications.pro
gis_patrol_client/src/patrol_icons/: patrol.qrc
gis_patrol_client/transl/: patrol.ts  patrol_ru.qm  patrol_ru.ts
gis_patrol_server/: install.sh  user.config.example-gentoo
gis_patrol_server/internals/: initdata.sql  initdb.sql
gis_patrol_server/internals/functions/: readd_functions.sql
gis_patrol_server/internals/functions/categories/: caddattr.sql  cdelattr.sql  cdeletecategory.sql  cfindequal.sql  cgetcategory.sql  cgetcategoryparams.sql  cgetcategorytypes.sql  cinsert.sql  cupdate.sql  cupdateattr.sql  readd_categories.sql
gis_patrol_server/internals/functions/categories/triggers/: readd_triggers.sql  trg_category_del.sql  trgcat_param_remove.sql  trgcat_params.sql
gis_patrol_server/internals/functions/general/: generateuid.sql  getexvaluesid.sql  getrecvalues.sql  readd_general.sql  recinsertvalues.sql
gis_patrol_server/internals/functions/init_data/: cat_params.sql  categories.sql  category_types.sql  io_objects.sql  maclabels.sql  param_groups.sql  param_types.sql  parameters.sql  readd_init_data.sql  users.sql
gis_patrol_server/internals/functions/io_objects/: getrealtablename.sql  iodelete.sql  iogetobject.sql  ioinsert.sql  ioinsertparam.sql  ioinserttable.sql  ioupdate.sql  readd_io_objects.sql
gis_patrol_server/internals/functions/io_objects/triggers/: trgdeleteio.sql  (+4 more)
gis_patrol_server/internals/functions/misc/: asstring.sql  f_enable_trigger.sql  f_is_table_exist.sql  f_is_type_exist.sql  f_is_view_exist.sql  f_safe_drop_index.sql  f_safe_drop_table.sql  f_safe_drop_type.sql  f_safe_drop_view.sql  getnextseq.sql  getrecordtable.sql  gis_patrol_version.sql  readd_misc.sql
gis_patrol_server/internals/functions/parameters/: pdelete.sql  pdeletegroup.sql  pfindequal.sql  pgetgroup.sql  pgetparameter.sql  pgetparameterslist.sql  pgetparamtype.sql  pinsert.sql  pinsertgroup.sql  pupdate.sql  pupdategroup.sql  readd_parameters.sql
gis_patrol_server/internals/functions/security/: addgroup.sql  adduser.sql  getauthorinfo.sql  getuser.sql  readd_security.sql
gis_patrol_server/internals/schema/: all_tables.sql  all_tables_12.sql  all_tables_9_6.sql  db_schema.dbm  db_schema_all.dbm  db_scheme.dia  g_patrol_electric.sql  maclabel.sql  patrol_c.dbm  patrol_c_log.dbm
gis_patrol_server/internals/schema/db_conn/: connections_schema.dbm
gis_patrol_server/internals/updates/: 0_0_1_to_1_0_0.sql  cat_user_params.sql  geography_type.sql  indexes.sql  iss_data.sql  parameter_full_name.sql  params.sql  params_values.sql  parent_param.sql  patrol_data.sql  tbl_id64.sql  tbl_io_params.sql  tbl_io_tables.sql  telecom_data.sql  user_params.sql
gis_patrol_server/system_files/: build.sh  createanalyzer.sh  createdb.sh  updatedb.sh
(+3 files in other folders)
